# Project2_iqmattso

./: .gitignore  README.md
gimbal_lock_demo/: package.xml  setup.py
gimbal_lock_demo/gimbal_lock_demo/: euler_quaternion_state_publisher.py
gimbal_lock_demo/launch/: gimbal_lock_demo.xml
gimbal_lock_demo/rviz/: gimbal.rviz
gimbal_lock_demo/urdf/: modified_r2d2.urdf  test_gimbal_visual.urdf
